--- a/src/main/resources/main/chat/chatList.html
+++ b/src/main/resources/main/chat/chatList.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <script src="/static/js/chat/chat.js"></script>
 </head>
 <body>
 <h2>Chat Room</h2>
   <!-- chat 객체가 존재하면 채팅방 정보를 보여주고, 없으면 "No chat room"을 보여줌 -->
-  <div th:if="${chat != null}">
-    <p>Chat Room Name: <span th:text="${chat.chatName}"></span></p>
+  <div id="chat_list" th:if="${chat != null}">
+    <p>Chat Room Name: <span th:attr="data-chat-id=${chat.chatId}" th:text="${chat.chatName}"></span></p>
   </div>
   <div th:if="${chat == null}">
     <p>No chat room found.</p>
